--- a/abstract.tex
+++ b/abstract.tex
@@ -1,5 +1,5 @@
 \begin{abstract}
 We propose a new kind of middlebox, called a \name, which manages \emph{traffic aggregates}, or a group of flows with a common origin domain and destination domain. \name can allow senders of traffic aggregates to unilaterally impose scheduling policy on component flows. This works by shifting the network bottleneck from the middle of the network, where it is difficult to enforce policies, to the edge (\ie the \name), where it is easy to do so.
 
-We propose a design of a \name which is flexible, compatible with hardware implementations, and can yield up to a \an{XXX} improvement in end-to-end metrics such a flow completion time (FCT).
+We propose a design of a \name which is flexible, compatible with hardware implementations, simple (we implement it in approximately $1500$ lines of code) and can yield up to a \an{XXX} improvement in end-to-end metrics such a flow completion time (FCT).
 \end{abstract}
