--- a/bundler-sigcomm19.tex
+++ b/bundler-sigcomm19.tex
@@ -16,7 +16,7 @@
 \newcommand{\inbox}{\an{In-box\xspace}}
 \newcommand{\outbox}{\an{Out-box\xspace}}
 \begin{document}
-\title{Taking Control of Your Own Traffic \an{better title}}
+\title{Taking Control of Your Traffic By Living on the Edge \an{better title}}
 
 \begin{sloppypar}
 \include{abstract}
@@ -25,6 +25,7 @@
 \input{design}
 \input{impl}
 \input{eval}
+\input{conclusion}
 
 \bibliographystyle{abbrv}
 \bibliography{ref}
