--- a/bundler-sigcomm19.tex
+++ b/bundler-sigcomm19.tex
@@ -12,9 +12,9 @@
 %\setlength{\abovedisplayskip}{0pt}
 %\setlength{\belowdisplayskip}{-5pt}
 
-\newcommand{\name}{\an{Bundler\xspace}}
-\newcommand{\inbox}{\an{In-box\xspace}}
-\newcommand{\outbox}{\an{Out-box\xspace}}
+\newcommand{\name}{Bundler\xspace}
+\newcommand{\inbox}{In-box\xspace}
+\newcommand{\outbox}{Out-box\xspace}
 \begin{document}
 \title{Taking Control of Your Traffic By Living on the Edge \an{better title}}
 
@@ -23,6 +23,7 @@
 \maketitle
 \input{intro}
 \input{design}
+\input{measure}
 \input{impl}
 \input{eval}
 \input{conclusion}
