--- a/intro.tex
+++ b/intro.tex
@@ -48,7 +48,7 @@ We make the following contributions:
 \end{enumerate}
 
 The rest of this paper is organized as follows: 
-\S\ref{s:design} describes various tradeoffs in the design of a \name. 
+\S\ref{s:design} describes tradeoffs in the design of a \name. 
 \S\ref{s:measurement} describes our approach to gathering measurements from the network. 
 \S\ref{s:impl} describes our prototype implementation. 
 \S\ref{s:eval} shows an evaluation of the benefits of \name.
