--- a/ref.bib
+++ b/ref.bib
@@ -1578,3 +1578,13 @@ title = {A Secure Environment for Untrusted Helper Applications (Confining the W
     booktitle = {Proceedings of the 12th Usenix Security Symposium},
     year = {2002},
 }
+
+@inproceedings{fivecomps,
+  title={Rethinking Networking for Five Computers},
+  author={Renganathan, Sundararajan and Padmanabhan, Venkata N and Nambi, Akshay Uttama},
+  booktitle={Proceedings of the 17th ACM Workshop on Hot Topics in Networks},
+  pages={92--98},
+  year={2018},
+  organization={ACM}
+}
+
